[package]
authors = ["Vadim Kaushan <admin@disasm.info>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Board support package for the Longan Nano board"
edition = "2018"
keywords = ["riscv", "gd32", "bsp"]
license = "ISC"
name = "longan-nano"
repository = "https://github.com/riscv-rust/longan-nano"
version = "0.2.0"

[dependencies]
embedded-graphics = "0.7.1"
embedded-graphics-core = "0.3.2"
embedded-hal = "0.2.3"
epd-waveshare = {git = "https://github.com/gqf2008/epd-waveshare", branch = "epd2in7b_v2"}
gd32vf103xx-hal = "0.4.0"
heapless = "0.7"
nb = "0.1.2"
profont = "0.4.0"
riscv = "0.6.0"
# riscv-alloc = {git = "https://github.com/riscv-rust/riscv-alloc"}
linked_list_allocator = "0.9.0"
ssd1306 = "0.7.0"
ssd1675 = "0.3.0"
st7735-lcd = {version = "0.8"}

[dev-dependencies]
panic-halt = "0.2.0"
riscv-rt = "0.8.0"

[[example]]
name = "display"

[[example]]
name = "ferris"
[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]

[profile.dev]
codegen-units = 1
debug = true
incremental = false
lto = true
opt-level = "z"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "z"
